@@ -25,7 +25,7 @@ use Dpkg::ErrorHandling qw(error);
 
 use Exporter;
 our @ISA = qw(Exporter);
-our @EXPORT_OK = qw(vercmp compare_versions check_version);
+our @EXPORT_OK = qw(vercmp compare_versions check_version parseversion);
 
 =head1 NAME
 
