@@ -8,6 +8,10 @@
 	the modified parse_changelog().
 	* scripts/dpkg-gensymbols.pl, scripts/dpkg-source.pl: Likewise.
 
+	* scripts/dpkg-genchanges.pl: Change logic of -si option to
+	include the original tarball only if the current upstream version differs
+	from the upstream version of the previous changelog entry.
+
 2008-01-18  Guillem Jover  <guillem@debian.org>
 
 	* m4/arch.m4 (_DPKG_ARCHITECTURE): Do not use backticks inside double
